# Real-Time-Sensor-Fusion-Dashboard

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  models.rs
backend/src/fusion/: complementary.rs  mod.rs
backend/src/sensors/: gps.rs  imu.rs  mod.rs
backend/src/websocket/: mod.rs  server.rs
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.tsx.backup  main.tsx
frontend/src/components/: AnomalyAlert.tsx  Dashboard.tsx  LiveChart.tsx  Scene3D.tsx  SensorPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: sensor.ts
ml-service/: requirements.txt
ml-service/src/: __init__.py  anomaly_detector.py  main.py  websocket_client.py
